--- a/lib/blog_web/templates/layout/_author_menu.html.eex
+++ b/lib/blog_web/templates/layout/_author_menu.html.eex
@@ -1,10 +1,11 @@
 <ul>
-<%= if @current_author do %>
-  <li><%= @current_author.email %></li>
-  <li><%= link "Settings", to: Routes.author_settings_path(@conn, :edit) %></li>
-  <li><%= link "Log out", to: Routes.author_session_path(@conn, :delete), method: :delete %></li>
-<% else %>
-  <li><%= link "Register", to: Routes.author_registration_path(@conn, :new) %></li>
-  <li><%= link "Log in", to: Routes.author_session_path(@conn, :new) %></li>
-<% end %>
+  <%= if @current_author do %>
+    <li><%= @current_author.email %></li>
+    <li><%= link "Settings", to: Routes.author_settings_path(@conn, :edit) %></li>
+    <li><%= link "Log out", to: Routes.author_session_path(@conn, :delete), method: :delete %></li>
+    <li><%= link "My Posts", to: Routes.posts_path(@conn, :list, @current_author.id) %></li>
+  <% else %>
+    <li><%= link "Register", to: Routes.author_registration_path(@conn, :new) %></li>
+    <li><%= link "Log in", to: Routes.author_session_path(@conn, :new) %></li>
+  <% end %>
 </ul>
