--- a/lib/blog_web/templates/layout/root.html.leex
+++ b/lib/blog_web/templates/layout/root.html.leex
@@ -14,16 +14,15 @@
       <section class="container">
         <nav role="navigation">
           <ul>
-            <li><a href="https://hexdocs.pm/phoenix/overview.html">Get Started</a></li>
+            <!--
             <%= if function_exported?(Routes, :live_dashboard_path, 2) do %>
               <li><%= link "LiveDashboard", to: Routes.live_dashboard_path(@conn, :home) %></li>
             <% end %>
+            -->
           </ul>
           <%= render "_author_menu.html", assigns %>
         </nav>
-        <a href="https://phoenixframework.org/" class="phx-logo">
-          <img src="<%= Routes.static_path(@conn, "/images/phoenix.png") %>" alt="Phoenix Framework Logo"/>
-        </a>
+        <h1> <%= link "Small", to: Routes.posts_path(@conn, :index) %></h1>
       </section>
     </header>
     <%= @inner_content %>
