--- a/lib/blog_web/live/posts_live.html.leex
+++ b/lib/blog_web/live/posts_live.html.leex
@@ -1,3 +1,10 @@
 <%= for post <- @posts do %>
-  <div><%= post.title %></div>
+  <div class="post_preview_container">
+    <div class="post_preview_left">
+      <div class="post_preview_title"><%= post.title %></div>
+      <div class="post_preview_subtitle"><%= post.subtitle %> by <%= link author_name(post.author_id), to: Routes.author_posts_path(BlogWeb.Endpoint, :index, post.author_id) %></div>
+      <p class="post_preview_body"><%= post.body %> </p>
+    </div>
+    <div class="post_preview_right"><img src="https://miro.medium.com/fit/c/250/168/1*0yuck3udWQGfjvmrg_TcAw.png"/></div>
+  </div>
 <% end %>
