--- a/lib/blog_web/live/posts_live.html.leex
+++ b/lib/blog_web/live/posts_live.html.leex
@@ -1,7 +1,7 @@
 <%= for post <- @posts do %>
   <div class="post_preview_container">
     <div class="post_preview_left">
-      <div class="post_preview_title"><%= post.title %></div>
+      <div class="post_preview_title"><%= link post.title, to: Routes.author_posts_path(BlogWeb.Endpoint, :show, post.id) %></div>
       <div class="post_preview_subtitle"><%= post.subtitle %> by <%= link author_name(post.author_id), to: Routes.author_posts_path(BlogWeb.Endpoint, :index, post.author_id) %></div>
       <p class="post_preview_body"><%= post.body %> </p>
     </div>
