add name to author

--- a/lib/blog_web/templates/author_posts/index.html.eex
+++ b/lib/blog_web/templates/author_posts/index.html.eex
@@ -1,4 +1,4 @@
-<h1>Posts by <%= @author.email %></h1>
+<h1>Posts by <%= @author.name %></h1>
 <%= for post <- @posts do %>
   <div class="post_preview_container">
     <div class="post_preview_left">
