--- a/lib/blog_web/templates/author_posts/show.html.eex
+++ b/lib/blog_web/templates/author_posts/show.html.eex
@@ -2,6 +2,9 @@
 <div class="post_container">
   <div class="post_title"><%= @post.title%> by <%= @author.name %></div>
   <div class="post_subtitle"><%= @post.subtitle %></div>
+  <%= if @current_author.id === @author.id do %>
+    <%= link "Edit", to: Routes.author_posts_path(BlogWeb.Endpoint, :edit, @post.id) %>
+  <%= end %>
   <img class="post_image" src="https://miro.medium.com/fit/c/250/168/1*0yuck3udWQGfjvmrg_TcAw.png"/>
   <p class="post_body"><%= @post.body %> </p>
 </div>
