--- a/lib/blog_web/templates/author_posts/show.html.eex
+++ b/lib/blog_web/templates/author_posts/show.html.eex
@@ -4,7 +4,8 @@
   <div class="post_subtitle"><%= @post.subtitle %></div>
   <%= if @current_author.id === @author.id do %>
     <%= link "Edit", to: Routes.author_posts_path(BlogWeb.Endpoint, :edit, @post.id) %>
-  <%= end %>
+    <%= link "Delete", to: Routes.author_posts_path(BlogWeb.Endpoint, :delete, @post.id), method: :delete %>
+  <% end %>
   <img class="post_image" src="https://miro.medium.com/fit/c/250/168/1*0yuck3udWQGfjvmrg_TcAw.png"/>
   <p class="post_body"><%= @post.body %> </p>
 </div>
