--- a/lib/blog_web/live/posts_live.html.leex
+++ b/lib/blog_web/live/posts_live.html.leex
@@ -5,6 +5,8 @@
       <div class="post_preview_subtitle"><%= post.subtitle %> by <%= link author_name(post.author_id), to: Routes.author_posts_path(BlogWeb.Endpoint, :index, post.author_id) %></div>
       <p class="post_preview_body"><%= post.body %> </p>
     </div>
-    <div class="post_preview_right"><img src="https://miro.medium.com/fit/c/250/168/1*0yuck3udWQGfjvmrg_TcAw.png"/></div>
+    <%= if post.link do %>
+      <div class="post_preview_right"><img src="<%= post.link %>"/></div>
+    <% end %>
   </div>
 <% end %>
